# DDMatch

./: docker-compose.yml
backend/: .env  Cargo.toml
backend/migrations/: 20241125105628_create_users_table.down.sql  20241125105628_create_users_table.up.sql
backend/src/: main.rs
backend/src/combinaisons/: combinaisons.rs  mod.rs
backend/src/db_items/: category.rs  couleur.rs  couleur_finale.rs  dragodinde.rs  insert_query.rs  mod.rs
backend/src/query_items/: mod.rs
backend/src/routes/: body_items.rs  menu_item_routes.rs  mod.rs  route_traits.rs
backend/src/routes/query_items/: mod.rs
backend/src/test/: mod.rs  test_combinaisons.rs
backend/src/utils/: ids.rs
common/: Cargo.toml
common/src/: couleur.rs  couleur_finale.rs  lib.rs
common/src/query/: mod.rs
frontend/: package-lock.json  vite.config.ts
frontend/.devcontainer/frontend/: Containerfile  devcontainer.json
frontend/src/: App.tsx  api.ts  theme.ts
