[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.sqlx-macros]
opt-level = 3

[features]

# Type Integration features
bigdecimal = ["dep:bigdecimal"]
chrono = ["dep:chrono"]
rust_decimal = ["dep:rust_decimal", "rust_decimal/maths"]
time = ["dep:time"]

[dependencies]
native-tls = "0.2.12"
sqlx = { version = "0.8.2", features = [ "runtime-async-std-native-tls", "runtime-async-std", "tls-native-tls", "mysql", "macros"] }
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

bigdecimal = { version = "0.4.6", optional = true }
chrono = { version = "0.4.38", optional = true }
rust_decimal = { version = "1.36.0", optional = true }
time = { version = "0.3.36", optional = true }

maplit = "1.0.2"
custom_error = "1.9.2"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
dotenv = "0.15.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]